# FL-QAT-Quantized-Communication-Benchmark

./: .gitignore  README.md  benchmark.py  cli.py  config.py  data_loaders.py  main.py  model.py  pyproject.toml  run.sh
datasets/: README.md
fed/: __init__.py  base.py  client.py  server.py
federated/: __init__.py  client.py  server.py
models/: __init__.py  adapter.py  adapter_model.py  feature_extractors.py  tail_tuning.py  vanilla.py
quant/: __init__.py  aggregation.py  comm.py  core.py  qat.py
utils/: __init__.py  device.py  display.py  evaluation.py  logging_utils.py  quant_utils.py
